--- a/SRC/bower.json
+++ b/SRC/bower.json
@@ -6,6 +6,7 @@
     "bootstrap": "^3.3.5",
     "jquery": "^1.12.0",
 		"less":"^2.5.1",
-		"font-awesome":"^4.6.3"
+    "font-awesome":"^4.6.3",
+    "waypoints":"^4.0.1"
   }
 }
