--- a/SRC/package.json
+++ b/SRC/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "gulp": "^3.9.0",
-    "gulp-install": "^1.1.0"
+    "gulp-install": "^1.1.0",
+    "gulp-util": "^3.0.8"
   }
 }
